# research_agent

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  test.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  test.yml
docs/: ENHANCED_FEATURES.md  GITHUB_WORKFLOWS.md  TESTING.md  TEST_QUICKSTART.md
scripts/: quality_check.bat  quality_check.py
src/: __init__.py  agent.py  enhanced_sage_agent.py  main.py
tests/: conftest.py  test_agent.py  test_enhanced_agent.py  test_integration.py  test_main.py
